Flashing number in drill section

--- a/src/app/shared/drill/drill.component.html
+++ b/src/app/shared/drill/drill.component.html
@@ -360,6 +360,8 @@
 
                     </tbody>
                 </table>
+
+                <p class="flashing-number">8</p>
                 <!-- IF the is a loop then place this outside the loop -->
                 <div class="table-sum">
                     <p> total: 7 of 7</p>
