--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,5 +1,5 @@
 <section class="edit-drill">
-
+    <ion-item #mainSection></ion-item>
     <header [class.ios-mode]="this.platform.is('ios')">
         <p> Edit Drill</p>
 
@@ -326,8 +326,7 @@
             </div>
         </div>
 
-        <button class="startSessionBtn" (click)="startSesstion()" routerLink="/home/tabs/tab2/select2"> START SESSION
-        </button>
+        <button class="startSessionBtn" (click)="startSesstion()" routerLink="/home/tabs/tab2/select2"> START SESSION        </button>
 
     </div>
 
