--- a/src/app/shared/authentication/signup/signup.component.scss
+++ b/src/app/shared/authentication/signup/signup.component.scss
@@ -3,20 +3,106 @@
 :host {
   width: 100%;
   height: 100%;
-
-  section {
-    width: 100%;
-    height: 100%;
-  }
+  position: absolute;
+  top: 225px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  padding: 0 16px;
 }
 
-.signInForm {
+
+
+section.sign-up {
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  .user-img-name{
+  box-sizing: border-box;
+  padding-bottom: 150px;
 
+  form.signInForm {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+
+    div.row {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-evenly;
+      width: 100%;
+
+      label {
+        position: relative;
+        box-sizing: border-box;
+        padding: 0.5em;
+        width: 100%;
+      }
+
+      p {
+        position: absolute;
+        top: 0;
+        left: 20px;
+        margin: 0;
+        height: 14px;
+        font-size: 12px;
+        font-weight: normal;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: 1.17;
+        letter-spacing: 0.4px;
+        text-align: left;
+        color: #bfbfbf;
+        background-color: white;
+        padding: 0 10px;
+        z-index: 1;
+      }
+
+      input {
+        height: 56px;
+        border-radius: 4px;
+        opacity: 0.5;
+        border: solid 1px #000000;
+        width: 100%;
+        color: #000;
+        box-sizing: border-box;
+        padding: 0.5em;
+      }
+    }
   }
+
+  div.controls {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    button.confirm {
+      height: 56px;
+      border-radius: 4px;
+      box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+      background-color: #ce564b;
+
+      font-size: 14px;
+      line-height: 16px;
+      letter-spacing: 1.25px;
+      color: white;
+      margin-bottom: 0.5em;
+    }
+    button.cancel {
+      height: 56px;
+      border-radius: 4px;
+      border: solid 1px #ce564b;
+      background-color: #ffffff;
+      font-size: 14px;
+      line-height: 16px;
+      letter-spacing: 1.25px;
+      color: #ce564b;
+    }
+  }
+
 }
+
